--- a/src/components/palette/color-box/styles.css
+++ b/src/components/palette/color-box/styles.css
@@ -7,8 +7,16 @@
     cursor: pointer;
     margin-bottom: -3.5px;
   }
+
+  .SingleColorPalette .ColorBox {
+    height: 50%;
+  }
+
+  .ColorBox.go-back {
+    background-color: black;
+  } 
   
-  .copy-button {
+  .copy-button, .back-button {
     width: 100px;
     height: 30px;
     position: absolute;
@@ -25,7 +33,13 @@
     color: white;
     text-transform: uppercase;
     border: none;
-    opacity: 0;
+  }
+  
+  .back-button {
+    text-decoration: none;
+  }
+  .copy-button {
+    opacity: 0
   }
   
   .ColorBox:hover .copy-button {
