--- a/src/components/page/styles.css
+++ b/src/components/page/styles.css
@@ -1,9 +1,9 @@
 .page {
     height: 100vh;
-    position: fixed;
     width: 100%;
     top: 0;
     transition: transform 0.5s ease-in-out;
+    overflow-x: hidden;
   }
   .page-enter {
     transform: translateX(100%)
